all links, all pdf, etc

--- a/src/apache_acc.html
+++ b/src/apache_acc.html
@@ -137,7 +137,10 @@
 							<span class="title">Accesorios Apache
 
 							</span>
-                <span class="subtitle">Accesorios para cabina Apache.</span>
+                <span class="subtitle">Accesorios para cabina Apache.
+                <a href="tanques.accesorios.pdf" target="_blank"
+                   style="color: #000000;">Descargar Folleto</a>
+                </span>
             </div>
             <!-- ENDS title -->
 
@@ -201,21 +204,6 @@
 </div>
 <!-- ENDS MAIN -->
 
-<!-- Twitter -->
-<div id="twitter">
-    <div class="wrapper">
-        <a href="#" id="prev-tweet"></a>
-        <a href="#" id="next-tweet"></a>
-        <img id="bird" src="img/bird.png" alt="Tweets"/>
-
-        <div id="tweets">
-            <ul class="tweet_list"></ul>
-        </div>
-    </div>
-</div>
-<!-- ENDS Twitter -->
-
-
 <!-- FOOTER -->
 <div id="footer">
     <!-- wrapper-footer -->
@@ -225,13 +213,13 @@
             <li class="col">
                 <h6>Productos</h6>
                 <ul>
-                    <li class="page_item"><a href="index.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="features.html">Cabinas Agrícolas</a></li>
-                    <li class="page_item"><a href="blog.html">Cabinas Tractores</a></li>
-                    <li class="page_item"><a href="portfolio.html">Cabinas Viales</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
-                    <li class="page_item"><a href="contact.html">Tanques</a></li>
-                    <li class="page_item"><a href="contact.html">Especiales</a></li>
+                    <li class="page_item"><a href="gallery.html">Tanques</a></li>
+                    <li class="page_item"><a href="gallery.html">Especiales</a></li>
                 </ul>
             </li>
 
