--- a/src/index.html
+++ b/src/index.html
@@ -170,25 +170,26 @@
                                                                                       alt="Post"/></a>
 
                             <div class="excerpt">
-                                <a href="single.html" class="header">Modelo de Cabina para máquinas Caterpillar modelo
+                                <a href="#" class="header">Modelo de Cabina para máquinas Caterpillar modelo
                                     CP533E</a>
 
                             </div>
-                            <a href="single.html" class="link-button"><span>Leer Mas &#8594;</span></a>
+                            <a href="caterpillar.html" class="link-button"><span>Leer Mas &#8594;</span></a>
                         </li>
                         <li>
-                            <a href="single.html" class="thumb" title="An image"><img src="img/dummies/recent2.png"
-                                                                                      alt="Post"/></a>
+                            <a href="#" class="thumb" title="An image"><img src="img/dummies/recent2.png"
+                                                                            alt="Post"/></a>
 
                             <div class="excerpt"><br/>
-                                <a href="single.html" class="header">Nueva cabina para autos BOBCAT 2200 4x4</a>
+                                <a href="#" class="header">Nueva cabina para autos BOBCAT 2200 4x4</a>
 
                             </div>
-                            <a href="single.html" class="link-button"><span>Leer Mas &#8594;</span></a>
+                            <a href="bobcat.html" class="link-button"><span>Leer Mas &#8594;</span></a>
                         </li>
                         <li>
-                            <a href="single.html" class="thumb" title="An image"><img src="img/dummies/clientesTP.png"
-                                                                                      alt="Post"/></a>
+                            <a href="novedades.html" class="thumb" title="An image"><img
+                                    src="img/dummies/clientesTP.png"
+                                    alt="Post"/></a>
 
                             <div class="excerpt">
                                 <a href="single.html" class="header">Estos son algunos de los cllientes que confían en
@@ -200,32 +201,6 @@
                     </ul>
                 </div>
                 <!-- ENDS posts -->
-
-                <!-- Information  -->
-                <div>
-                    <div class="plain-text">
-                        <h6>Pellentesque habitant morbi tristique senectus et netus et malesuada.</h6>
-
-                        <p>Fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit
-                            amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est.
-                            Mauris placerat eleifend leo. Cursus faucibus, tortor neque egestas augue, eu vulputate
-                            magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor,
-                            facilisis luctus, metus. </p>
-
-                        <p>Fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit
-                            amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est.
-                            Mauris placerat eleifend leo. Cursus faucibus, tortor neque egestas augue, eu vulputate
-                            magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor,
-                            facilisis luctus, metus.Fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-                            ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper <a
-                                    href="single.html">This is a link</a>. Aenean ultricies mi vitae est. Mauris
-                            placerat eleifend leo. Cursus faucibus, tortor neque egestas augue, eu vulputate magna eros
-                            eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis
-                            luctus, metus. </p>
-                        <a href="single.html" class="link-button"><span>Read more &#8594;</span></a>
-                    </div>
-                </div>
-                <!-- ENDS Information -->
 
                 <!-- Posts -->
                 <div>
