--- a/src/special.html
+++ b/src/special.html
@@ -135,7 +135,11 @@
             <!-- title -->
             <div id="page-title">
                 <span class="title">Cabina adaptable Desarrollos Especiales</span>
-                <span class="subtitle">Cabina para tractores.</span>
+                <span class="subtitle">Cabina para tractores.
+                 <a href="cab.tractores.pdf" target="_blank"
+                    style="color: #000000;">Descargar Folleto</a>
+
+                </span>
             </div>
             <!-- ENDS title -->
 
@@ -209,13 +213,13 @@
             <li class="col">
                 <h6>Productos</h6>
                 <ul>
-                    <li class="page_item"><a href="index.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="features.html">Cabinas Agrícolas</a></li>
-                    <li class="page_item"><a href="blog.html">Cabinas Tractores</a></li>
-                    <li class="page_item"><a href="portfolio.html">Cabinas Viales</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
-                    <li class="page_item"><a href="contact.html">Tanques</a></li>
-                    <li class="page_item"><a href="contact.html">Especiales</a></li>
+                    <li class="page_item"><a href="gallery.html">Tanques</a></li>
+                    <li class="page_item"><a href="gallery.html">Especiales</a></li>
                 </ul>
             </li>
 
