--- a/src/gallery.html
+++ b/src/gallery.html
@@ -80,7 +80,6 @@
     <script type="text/javascript" src="js/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
     <!-- ENDS Fancybox -->
 
-
 </head>
 
 <body class="home">
@@ -96,10 +95,8 @@
 </div>
 <!-- ENDS HEADER -->
 
-
 <!-- Menu -->
 <div id="menu">
-
 
     <!-- ENDS menu-holder -->
     <div id="menu-holder">
@@ -121,7 +118,6 @@
 </div>
 <!-- ENDS Menu -->
 
-
 <!-- MAIN -->
 <div id="main">
     <!-- wrapper-main -->
@@ -133,7 +129,11 @@
             <!-- title -->
             <div id="page-title">
                 <span class="title">Nuestros productos</span>
-                <span class="subtitle">Debajo se encuetran todos los productos que fabricamos </span>
+                <span class="subtitle">Debajo se encuetran todos los productos que fabricamos
+                            <a href="cab.maquinas.generales.pdf" target="_blank" style="color: #000000;">Descargar Folleto</a>
+                     <!--<a href="cab.maquinas.agricolas.pdf" target="_blank" style="color: #000000;">Descargar Folleto</a>-->
+
+                </span>
             </div>
             <!-- ENDS title -->
 
@@ -150,7 +150,6 @@
                 <li><a href="#" data-filter=".especiales"> Especiales </a></li>
             </ul>
             <!-- ENDS filter -->
-
 
             <!-- gallery-->
             <ul id="portfolio-list" class="gallery">
@@ -272,11 +271,8 @@
                 <li class="tanques"><a href="#" title="Tanque"><img
                         src="img/productos/tanques/t13mini.png" alt="Pic"></a></li>
 
-
-
             </ul>
             <!-- ENDS gallery -->
-
 
         </div>
         <!-- ENDS content -->
@@ -285,20 +281,6 @@
     <!-- ENDS wrapper-main -->
 </div>
 <!-- ENDS MAIN -->
-
-<!-- Twitter -->
-<div id="twitter">
-    <div class="wrapper">
-        <a href="#" id="prev-tweet"></a>
-        <a href="#" id="next-tweet"></a>
-        <img id="bird" src="img/bird.png" alt="Tweets"/>
-
-        <div id="tweets">
-            <ul class="tweet_list"></ul>
-        </div>
-    </div>
-</div>
-<!-- ENDS Twitter -->
 
 <!-- FOOTER -->
 <div id="footer">
