--- a/src/sanblas.html
+++ b/src/sanblas.html
@@ -136,7 +136,10 @@
             <div id="page-title">
 							<span class="title">Modelo cabina San Blas
 							</span>
-                <span class="subtitle">Cabina Vial.</span>
+                <span class="subtitle">Cabina Vial.
+                 <a href="cab.maquinas.viales.pdf" target="_blank"
+                    style="color: #000000;">Descargar Folleto</a>
+                </span>
             </div>
             <!-- ENDS title -->
 
@@ -199,21 +202,6 @@
 </div>
 <!-- ENDS MAIN -->
 
-<!-- Twitter -->
-<div id="twitter">
-    <div class="wrapper">
-        <a href="#" id="prev-tweet"></a>
-        <a href="#" id="next-tweet"></a>
-        <img id="bird" src="img/bird.png" alt="Tweets"/>
-
-        <div id="tweets">
-            <ul class="tweet_list"></ul>
-        </div>
-    </div>
-</div>
-<!-- ENDS Twitter -->
-
-
 <!-- FOOTER -->
 <div id="footer">
     <!-- wrapper-footer -->
@@ -244,17 +232,7 @@
 
                 <p>Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera
                     constante, acompañando a nuestros clientes en el desarrollo de sus proyectos</p>
-                <!--<ul>-->
-                <!--<li><a href="#">Somos una empresa</a></li>-->
-                <!--<li><a href="#/">Wordpress projects senectus</a></li>-->
-                <!--<li><a href="#">Vestibulum tortor quam</a></li>-->
-                <!--<li><a href="#">Code projects amet quam egestas</a></li>-->
-                <!--<li><a href="#">Web design projects senectus</a></li>-->
-                <!--<li><a href="#/">Marketplace projects</a></li>-->
-                <!--<li><a href="#">Writting projects senectus</a></li>-->
-                <!--<li><a href="#">Drawings projects fames Aenean</a></li>-->
-                <!--<li><a href="#/">Wordpress projects Aenean ultricies</a></li>-->
-                <!--</ul>-->
+
             </li>
             <li class="col">
                 <h6>Contacto</h6>
