--- a/src/tanque1.html
+++ b/src/tanque1.html
@@ -136,6 +136,12 @@
             <div id="page-title">
 							<span class="title">Tanque
 							</span>
+                <span class="subtitle">
+                 <a href="tanques.accesorios.pdf" target="_blank"
+                    style="color: #000000;">Descargar Folleto</a>
+                </span>
+
+
             </div>
             <!-- ENDS title -->
 
@@ -227,13 +233,13 @@
             <li class="col">
                 <h6>Productos</h6>
                 <ul>
-                    <li class="page_item"><a href="index.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="features.html">Cabinas Agrícolas</a></li>
-                    <li class="page_item"><a href="blog.html">Cabinas Tractores</a></li>
-                    <li class="page_item"><a href="portfolio.html">Cabinas Viales</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
-                    <li class="page_item"><a href="contact.html">Tanques</a></li>
-                    <li class="page_item"><a href="contact.html">Especiales</a></li>
+                    <li class="page_item"><a href="gallery.html">Tanques</a></li>
+                    <li class="page_item"><a href="gallery.html">Especiales</a></li>
                 </ul>
             </li>
 
@@ -248,17 +254,7 @@
 
                 <p>Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera
                     constante, acompañando a nuestros clientes en el desarrollo de sus proyectos</p>
-                <!--<ul>-->
-                <!--<li><a href="#">Somos una empresa</a></li>-->
-                <!--<li><a href="#/">Wordpress projects senectus</a></li>-->
-                <!--<li><a href="#">Vestibulum tortor quam</a></li>-->
-                <!--<li><a href="#">Code projects amet quam egestas</a></li>-->
-                <!--<li><a href="#">Web design projects senectus</a></li>-->
-                <!--<li><a href="#/">Marketplace projects</a></li>-->
-                <!--<li><a href="#">Writting projects senectus</a></li>-->
-                <!--<li><a href="#">Drawings projects fames Aenean</a></li>-->
-                <!--<li><a href="#/">Wordpress projects Aenean ultricies</a></li>-->
-                <!--</ul>-->
+
             </li>
             <li class="col">
                 <h6>Contacto</h6>
