--- a/src/tedeschi.html
+++ b/src/tedeschi.html
@@ -136,7 +136,11 @@
             <div id="page-title">
 							<span class="title">Modelo Tedeschi M-2600 Y MT-3000
 							</span>
-                <span class="subtitle">Cabina agrícola.</span>
+                <span class="subtitle">Cabina agrícola.
+                                     <a href="cab.maquinas.agricolas.pdf" target="_blank" style="color: #000000;">Descargar
+                                         Folleto</a>
+
+                </span>
             </div>
             <!-- ENDS title -->
 
@@ -185,8 +189,8 @@
                 <p style="margin-bottom: 5px;">Nuestro compromiso, es poder brindarnos de manera integra, para que luego
                     de un exaustivo trabajo en equipo, nuestros clientes, obtengan el producto esperado.</p> <br/>
 
-                <p style="margin-bottom: 5px;">Confiabilidad, lealtad y reserva, son nuestros pilares fundamentales a la hora de encarar un nuevo desarrollo , un nuevo producto.</p>
-
+                <p style="margin-bottom: 5px;">Confiabilidad, lealtad y reserva, son nuestros pilares fundamentales a la
+                    hora de encarar un nuevo desarrollo , un nuevo producto.</p>
 
 
             </div>
@@ -202,20 +206,6 @@
 </div>
 <!-- ENDS MAIN -->
 
-<!-- Twitter -->
-<div id="twitter">
-    <div class="wrapper">
-        <a href="#" id="prev-tweet"></a>
-        <a href="#" id="next-tweet"></a>
-        <img id="bird" src="img/bird.png" alt="Tweets"/>
-
-        <div id="tweets">
-            <ul class="tweet_list"></ul>
-        </div>
-    </div>
-</div>
-<!-- ENDS Twitter -->
-
 
 <!-- FOOTER -->
 <div id="footer">
@@ -226,13 +216,13 @@
             <li class="col">
                 <h6>Productos</h6>
                 <ul>
-                    <li class="page_item"><a href="index.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="features.html">Cabinas Agrícolas</a></li>
-                    <li class="page_item"><a href="blog.html">Cabinas Tractores</a></li>
-                    <li class="page_item"><a href="portfolio.html">Cabinas Viales</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
-                    <li class="page_item"><a href="contact.html">Tanques</a></li>
-                    <li class="page_item"><a href="contact.html">Especiales</a></li>
+                    <li class="page_item"><a href="gallery.html">Tanques</a></li>
+                    <li class="page_item"><a href="gallery.html">Especiales</a></li>
                 </ul>
             </li>
 
@@ -247,17 +237,7 @@
 
                 <p>Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera
                     constante, acompañando a nuestros clientes en el desarrollo de sus proyectos</p>
-                <!--<ul>-->
-                <!--<li><a href="#">Somos una empresa</a></li>-->
-                <!--<li><a href="#/">Wordpress projects senectus</a></li>-->
-                <!--<li><a href="#">Vestibulum tortor quam</a></li>-->
-                <!--<li><a href="#">Code projects amet quam egestas</a></li>-->
-                <!--<li><a href="#">Web design projects senectus</a></li>-->
-                <!--<li><a href="#/">Marketplace projects</a></li>-->
-                <!--<li><a href="#">Writting projects senectus</a></li>-->
-                <!--<li><a href="#">Drawings projects fames Aenean</a></li>-->
-                <!--<li><a href="#/">Wordpress projects Aenean ultricies</a></li>-->
-                <!--</ul>-->
+
             </li>
             <li class="col">
                 <h6>Contacto</h6>
