--- a/src/valtra.html
+++ b/src/valtra.html
@@ -124,9 +124,6 @@
 <!-- ENDS Menu -->
 
 
-
-
-
 <!-- MAIN -->
 <div id="main">
     <!-- wrapper-main -->
@@ -138,7 +135,11 @@
             <!-- title -->
             <div id="page-title">
                 <span class="title">Cabina adaptables VALTRA</span>
-                <span class="subtitle">Cabina para tractores.</span>
+                <span class="subtitle">Cabina para tractores.
+                                                      <a href="cab.tractores.pdf" target="_blank"
+                                                         style="color: #000000;">Descargar Folleto</a>
+
+                </span>
             </div>
             <!-- ENDS title -->
 
@@ -146,7 +147,7 @@
             <div class="project-column">
                 <!-- shadow -->
                 <div class="project-shadow">
-                    <div class="project-thumbnail"><img src="img/productos/valtra/1.jpg"  alt="Feature image" /></div>
+                    <div class="project-thumbnail"><img src="img/productos/valtra/1.jpg" alt="Feature image"/></div>
                     <!-- meta -->
 
                     <!-- ENDS meta -->
@@ -158,8 +159,10 @@
                 <!-- project gallery -->
                 <h2>Imágenes de esta cabina</h2>
                 <ul class="project-gallery">
-                    <li><a href="img/productos/valtra/1.jpg" class="fancybox"><img src="img/productos/valtra/1mini.jpg" alt="Pic"></a></li>
-                    <li><a href="img/productos/valtra/2.jpg" class="fancybox"><img src="img/productos/valtra/2mini.jpg" alt="Pic"></a></li>
+                    <li><a href="img/productos/valtra/1.jpg" class="fancybox"><img src="img/productos/valtra/1mini.jpg"
+                                                                                   alt="Pic"></a></li>
+                    <li><a href="img/productos/valtra/2.jpg" class="fancybox"><img src="img/productos/valtra/2mini.jpg"
+                                                                                   alt="Pic"></a></li>
 
                 </ul>
                 <!-- ENDS project gallery -->
@@ -172,7 +175,8 @@
             <div class="project-column">
                 <h1 class="project-title">Descripción:</h1>
 
-                <p>Contamos con una exclusiva linea para tractores,las cuales son realizadas siguiendo los lineamientos y calidad de las cabinas originales.
+                <p>Contamos con una exclusiva linea para tractores,las cuales son realizadas siguiendo los lineamientos
+                    y calidad de las cabinas originales.
                     Brindamos al usuario, facilidad en el montaje y hermeticidad en su trabajo.</p>
 
                 <h2 class="project-title">Linea BM</h2>
@@ -213,13 +217,13 @@
             <li class="col">
                 <h6>Productos</h6>
                 <ul>
-                    <li class="page_item"><a href="index.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="features.html">Cabinas Agrícolas</a></li>
-                    <li class="page_item"><a href="blog.html">Cabinas Tractores</a></li>
-                    <li class="page_item"><a href="portfolio.html">Cabinas Viales</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
-                    <li class="page_item"><a href="contact.html">Tanques</a></li>
-                    <li class="page_item"><a href="contact.html">Especiales</a></li>
+                    <li class="page_item"><a href="gallery.html">Tanques</a></li>
+                    <li class="page_item"><a href="gallery.html">Especiales</a></li>
                 </ul>
             </li>
 
@@ -257,7 +261,9 @@
 <div id="bottom">
     <!-- wrapper-bottom -->
     <div class="wrapper">
-        <div id="bottom-text">Powered by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;" src="img/footer/logo_footer.png"></a></div>
+        <div id="bottom-text">Powered by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;"
+                                                                                      src="img/footer/logo_footer.png"></a>
+        </div>
         <!-- Social -->
         <ul class="social ">
             <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Visitanos en facebook"></a></li>
