--- a/src/vialvieja.html
+++ b/src/vialvieja.html
@@ -136,7 +136,10 @@
             <div id="page-title">
 							<span class="title">Modelo cabina
 							</span>
-                <span class="subtitle">Cabina Vial.</span>
+                <span class="subtitle">Cabina Vial.
+                 <a href="cab.maquinas.viales.pdf" target="_blank"
+                    style="color: #000000;">Descargar Folleto</a>
+                </span>
             </div>
             <!-- ENDS title -->
 
@@ -144,7 +147,8 @@
             <div class="project-column">
                 <!-- shadow -->
                 <div class="project-shadow">
-                    <div class="project-thumbnail"><img src="img/productos/viales/vialvieja/3big.png" alt="Feature image"/>
+                    <div class="project-thumbnail"><img src="img/productos/viales/vialvieja/3big.png"
+                                                        alt="Feature image"/>
                     </div>
                     <!-- meta -->
 
@@ -199,21 +203,6 @@
 </div>
 <!-- ENDS MAIN -->
 
-<!-- Twitter -->
-<div id="twitter">
-    <div class="wrapper">
-        <a href="#" id="prev-tweet"></a>
-        <a href="#" id="next-tweet"></a>
-        <img id="bird" src="img/bird.png" alt="Tweets"/>
-
-        <div id="tweets">
-            <ul class="tweet_list"></ul>
-        </div>
-    </div>
-</div>
-<!-- ENDS Twitter -->
-
-
 <!-- FOOTER -->
 <div id="footer">
     <!-- wrapper-footer -->
@@ -223,13 +212,13 @@
             <li class="col">
                 <h6>Productos</h6>
                 <ul>
-                    <li class="page_item"><a href="index.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="features.html">Cabinas Agrícolas</a></li>
-                    <li class="page_item"><a href="blog.html">Cabinas Tractores</a></li>
-                    <li class="page_item"><a href="portfolio.html">Cabinas Viales</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
-                    <li class="page_item"><a href="contact.html">Tanques</a></li>
-                    <li class="page_item"><a href="contact.html">Especiales</a></li>
+                    <li class="page_item"><a href="gallery.html">Tanques</a></li>
+                    <li class="page_item"><a href="gallery.html">Especiales</a></li>
                 </ul>
             </li>
 
@@ -244,17 +233,6 @@
 
                 <p>Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera
                     constante, acompañando a nuestros clientes en el desarrollo de sus proyectos</p>
-                <!--<ul>-->
-                <!--<li><a href="#">Somos una empresa</a></li>-->
-                <!--<li><a href="#/">Wordpress projects senectus</a></li>-->
-                <!--<li><a href="#">Vestibulum tortor quam</a></li>-->
-                <!--<li><a href="#">Code projects amet quam egestas</a></li>-->
-                <!--<li><a href="#">Web design projects senectus</a></li>-->
-                <!--<li><a href="#/">Marketplace projects</a></li>-->
-                <!--<li><a href="#">Writting projects senectus</a></li>-->
-                <!--<li><a href="#">Drawings projects fames Aenean</a></li>-->
-                <!--<li><a href="#/">Wordpress projects Aenean ultricies</a></li>-->
-                <!--</ul>-->
             </li>
             <li class="col">
                 <h6>Contacto</h6>
