--- a/src/features.html
+++ b/src/features.html
@@ -112,7 +112,6 @@
 
                 </li>
                 <li><a href="gallery.html">Productos</a></li>
-                <li><a href="portfolio.html">Novedades</a></li>
                 <li><a href="contact.html">Contacto</a></li>
             </ul>
             <!-- Navigation -->
@@ -144,14 +143,17 @@
 
                 <!-- 2 cols -->
                 <div class="one-half">
-                    <h6 class="line-divider">Quienes Somos?</h6> <br/>
+                    <h6 class="line-divider">TecnoPartes</h6> <br/>
 
-                    <img src="img/logo2.png" style="width: 250px; margin-left: 56px"> <br/><br/>
-                    <p>Es una empresa Argentina, dedicada al diseño, desarrollo, y productos realizados
-                        en plástico reforzado con fibra de vidrio para el abastecimiento de diversos mercados</p>
+                    <p>Tecno partes es una empresa argentina, dedicada al diseño, desarrollo y fabricación de productos realizados en Plástico Reforzado con Fibra de Vidrio, para el abastecimiento de diversos mercados.
+                        Con  30 años de trayectoria, la empresa es líder en la fabricación de cabinas y componentes para maquinaria agrícola y vial.
+                    </p>
+                    <p>
+                    Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera constante, acompañando a nuestros clientes en el desarrollo de sus proyectos.
+                    </p>
 
-                    <p>Con mas de 20 años de trayectoria, la empresa es lider de fabricación de cabinas y componentes
-                        para maquinaria agrícola y vial.</p>
+
+
                 </div>
                 <br/><br/>
 
@@ -163,71 +165,21 @@
                 <div class="clear "></div>
                 <!-- ENDS 2 cols -->
 
-                <!-- 2 cols -->
-                <div class="one-half">
-                    <h6 class="line-divider">Sobre Tecno Partes</h6>
 
-                    <!-- toggle -->
-                    <h6 class="toggle-trigger"><a href="#">Nuestra Visión</a></h6>
-
-                    <div class="toggle-container">
-                        <div class="block">
-                            <p>"Ser pioneros en cada segmento que nos involucre, realizando nuestro trabajo con
-                                efectividad y eficiencia" </p>
-                        </div>
-                    </div>
-                    <h6 class="toggle-trigger"><a href="#">Nuestra Misión</a></h6>
-
-                    <div class="toggle-container">
-                        <div class="block">
-                            <p>"Hacer de nuestro trabajo diario, la satifacción de nuestros clientes" </p>
-                        </div>
-                    </div>
-                    <h6 class="toggle-trigger"><a href="#">Nuestros Valores</a></h6>
-
-                    <div class="toggle-container">
-                        <div class="block">
-                            <p>HONESTIDAD: Hacia nuestros integrantes, clientes y proveedores.<br/>
-                                RESPETO: Hacia todo y hacia todos. <br/>
-                                LEALTAD: Hacia nuestros clientes, productos y mercado. <br/>
-                                COMPROMISO: Por nuestro trabajo diario, y hacia nuestros valores mismos<br/></p>
-                        </div>
-                    </div>
-
-                    <p class="clear"></p>
-                    <!-- ENDS toggle -->
-                </div>
-                <br/><br/>
-
-                <div class="one-half last">
+                <div class="last">
                     <!--<h6 class="line-divider">Nuestro trabajo</h6>-->
 
-                    <p>Brindamos soluciones únicas y creativas que le aporten valor a las necesidades de sus Clientes,
-                        Tecno Partes es una empresa dinámica que brinda atención personalizada y trabajo en conjunto,
-                        tanto a los grandes fabricantes como a los usuarios finales.<br/><br/>
-
-                        Hoy, la empresa cuenta con una capacidad productiva de más de 3.000 mts2 donde se desarrollan
-                        las áreas productiva, técnica y administrativa. Dotada de maquinaria y herramental de primer
-                        nivel, abastece un mercado cada vez más exigente con productos de calidad superior.</p>
+                    <p>
+                        Con soluciones únicas y creativas que le aporten valor a las necesidades de sus Clientes,
+                        Tecno Partes es una empresa dinámica que brinda atención personalizada y trabajo en conjunto, tanto a los grandes fabricantes como a los usuarios finales.
+                    </p>
+                    <p>
+                        Actualmente la empresa cuenta con una capacidad productiva de más de 3.000 mts2 donde se desarrollan las áreas productiva, técnica y administrativa. Dotada de maquinaria y herramental de primer nivel, abastece un mercado cada vez más exigente con productos de calidad superior.
+                    </p>
                 </div>
                 <div class="clear "></div>
                 <!-- ENDS 2 cols -->
 
-            </div>
-
-            <div class="one-half ">
-
-                <h6 class="line-divider" style="margin-left: 33px">Tecno Partes en la TV</h6>
-
-                <p  style="margin-left: 33px">Una breve recorrida por nuestra empresa<br/><br/>
-                    Duración: 7 min 4 seg</p>
-
-
-            </div>
-
-            <div class="one-half">
-                <iframe class="youtube-player" type="text/html" width="470" height="285"
-                        src="http://www.youtube.com/embed/7c4WYzr30B0" frameborder="0"></iframe>
             </div>
 
 
@@ -251,7 +203,7 @@
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
                     <li class="page_item"><a href="gallery.html">Tanques</a></li>
@@ -261,15 +213,8 @@
 
             <li class="col">
                 <h6>Tecno-Partes</h6>
+                <p>Mas de 20 años junto a vos.</p>
 
-                <p>Somos una empresa dedicada hace mas de 20 años al diseño, desarrolo y producción de productos en
-                    plastico reforzado con fibra de vidrio.</p>
-
-                <p>Durante estos años, hemos orientado todos nuestros recursos a las transformaciones de la cambiante y
-                    sorprendente industria</p>
-
-                <p>Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera
-                    constante, acompañando a nuestros clientes en el desarrollo de sus proyectos</p>
 
             </li>
             <li class="col">
@@ -277,8 +222,7 @@
 
                 Andonaegui 5676, Gonzalez Catán<br/>
                 Buenos Aires, Argentina<br/>
-                Tel: 011-5274-8501/8516
-                Tel/FAX: (02202) 431260
+                Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
             </li>
 
