--- a/src/gallery.html
+++ b/src/gallery.html
@@ -107,7 +107,6 @@
                 <li><a href="index.html">Principal</a></li>
                 <li><a href="features.html">La Empresa</a></li>
                 <li class="current-menu-item"><a href="gallery.html">Productos</a></li>
-                <li><a href="#">Novedades</a></li>
                 <li><a href="contact.html">Contacto</a></li>
             </ul>
             <!-- Navigation -->
@@ -141,11 +140,11 @@
             <ul id="portfolio-filter" class="filter">
                 <li>Filtrar:</li>
                 <li><a href="#" data-filter="*"> Todos </a></li>
-                <li><a href="#" data-filter=".adaptables"> Cabinas Adaptables </a></li>
-                <li><a href="#" data-filter=".agricolas"> Cabinas Agrícolas </a></li>
-                <li><a href="#" data-filter=".tractores"> Cabinas para Tractores </a></li>
-                <li><a href="#" data-filter=".viales"> Cabinas Viales </a></li>
-                <li><a href="#" data-filter=".accesorios"> Accesorios </a></li>
+                <li><a href="#" data-filter=".adaptables"> Cab. Adaptables </a></li>
+                <li><a href="#" data-filter=".agricolas"> Cab. Agrícolas </a></li>
+                <li><a href="#" data-filter=".AutoElevadores"> Cab. Auto Elevadores </a></li>
+                <li><a href="#" data-filter=".viales"> Cab. Viales </a></li>
+                <li><a href="#" data-filter=".libre"> Aire Libre / Jardin </a></li>
                 <li><a href="#" data-filter=".tanques"> Tanques </a></li>
                 <li><a href="#" data-filter=".especiales"> Especiales </a></li>
             </ul>
@@ -187,13 +186,13 @@
                                                                               alt="Pic"></a></li>
                 <li class="agricolas"><a href="seraf.html" title="Seraf"><img src="img/productos/seraf/1mini.jpg"
                                                                               alt="Pic"></a></li>
-                <li class="tractores"><a href="deere.html" title="Deere"><img src="img/productos/deere/1mini.jpg"
+                <li class="AutoElevadores"><a href="deere.html" title="Deere"><img src="img/productos/deere/1mini.jpg"
                                                                               alt="Pic"></a></li>
-                <li class="tractores"><a href="holland.html" title="New Holland"><img
+                <li class="AutoElevadores"><a href="holland.html" title="New Holland"><img
                         src="img/productos/holland/1mini.jpg" alt="Pic"></a></li>
-                <li class="tractores"><a href="valtra.html" title="Valtra"><img src="img/productos/valtra/1mini.jpg"
+                <li class="AutoElevadores"><a href="valtra.html" title="Valtra"><img src="img/productos/valtra/1mini.jpg"
                                                                                 alt="Pic"></a></li>
-                <li class="tractores"><a href="special.html" title="Especial"><img src="img/productos/special/1mini.jpg"
+                <li class="AutoElevadores"><a href="special.html" title="Especial"><img src="img/productos/special/1mini.jpg"
                                                                                    alt="Pic"></a></li>
                 <li class="accesorios"><a href="spw_acc.html" title="SPW - Accesorio"><img
                         src="img/productos/accesorios/spw/1mini.png" alt="Pic"></a></li>
@@ -237,11 +236,11 @@
                         src="img/productos/especial1/1especialmini.png" alt="Pic"></a></li>
                 <li class="especiales"><a href="especial2.html" title="Sillon"><img
                         src="img/productos/especial2/1especialmini.png" alt="Pic"></a></li>
-                <li class="especiales"><a href="cuchas.html" title="Cuchas"><img
+                <li class="libre"><a href="cuchas.html" title="Cuchas"><img
                         src="img/productos/especiales/cuchas.png" alt="Pic"></a></li>
-                <li class="especiales"><a href="juegos.html" title="Juegos"><img
+                <li class="libre"><a href="juegos.html" title="Juegos"><img
                         src="img/productos/especiales/juegos/portada.png" alt="Pic"></a></li>
-                <li class="especiales"><a href="desarrollos.html" title="Desarrollos"><img
+                <li class="libre"><a href="desarrollos.html" title="Desarrollos"><img
                         src="img/productos/especiales/desarrollos/portada.png" alt="Pic"></a></li>
 
                 <li class="tanques"><a href="tanque1.html" title="Tanque"><img
@@ -293,7 +292,7 @@
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
                     <li class="page_item"><a href="gallery.html">Tanques</a></li>
@@ -304,14 +303,8 @@
             <li class="col">
                 <h6>Tecno-Partes</h6>
 
-                <p>Somos una empresa dedicada hace mas de 20 años al diseño, desarrolo y producción de productos en
-                    plastico reforzado con fibra de vidrio.</p>
+                <p>Mas de 20 años junto a vos.</p>
 
-                <p>Durante estos años, hemos orientado todos nuestros recursos a las transformaciones de la cambiante y
-                    sorprendente industria</p>
-
-                <p>Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera
-                    constante, acompañando a nuestros clientes en el desarrollo de sus proyectos</p>
 
             </li>
             <li class="col">
@@ -319,8 +312,7 @@
 
                 Andonaegui 5676, Gonzalez Catán<br/>
                 Buenos Aires, Argentina<br/>
-                Tel: 011-5274-8501/8516
-                Tel/FAX: (02202) 431260
+                Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
             </li>
 
