--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,6 @@
                 <li class="current-menu-item"><a href="index.html">Principal</a></li>
                 <li><a href="features.html">La Empresa</a></li>
                 <li><a href="gallery.html">Productos</a></li>
-                <li><a href="#">Novedades</a></li>
                 <li><a href="contact.html">Contacto</a></li>
             </ul>
             <!-- Navigation -->
@@ -187,16 +186,15 @@
                             <a href="bobcat.html" class="link-button"><span>Leer Mas &#8594;</span></a>
                         </li>
                         <li>
-                            <a href="novedades.html" class="thumb" title="An image"><img
+                            <a href="#" class="thumb" title="An image"><img
                                     src="img/dummies/clientesTP.png"
                                     alt="Post"/></a>
 
                             <div class="excerpt">
-                                <a href="single.html" class="header">Estos son algunos de los cllientes que confían en
-                                    nosotros.</a>
+                                <div class="header">Estos son algunos de los cllientes que confían en
+                                    nosotros.</div>
 
                             </div>
-                            <a href="single.html" class="link-button"><span>Leer Mas &#8594;</span></a>
                         </li>
                     </ul>
                 </div>
@@ -271,7 +269,7 @@
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
                     <li class="page_item"><a href="gallery.html">Tanques</a></li>
@@ -282,14 +280,8 @@
             <li class="col">
                 <h6>Tecno-Partes</h6>
 
-                <p>Somos una empresa dedicada hace mas de 20 años al diseño, desarrolo y producción de productos en
-                    plastico reforzado con fibra de vidrio.</p>
+                <p>Mas de 20 años junto a vos.</p>
 
-                <p>Durante estos años, hemos orientado todos nuestros recursos a las transformaciones de la cambiante y
-                    sorprendente industria</p>
-
-                <p>Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera
-                    constante, acompañando a nuestros clientes en el desarrollo de sus proyectos</p>
 
             </li>
             <li class="col">
@@ -297,8 +289,7 @@
 
                 Andonaegui 5676, Gonzalez Catán<br/>
                 Buenos Aires, Argentina<br/>
-                Tel: 011-5274-8501/8516
-                Tel/FAX: (02202) 431260
+                Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
             </li>
 
