--- a/src/desarrollos.html
+++ b/src/desarrollos.html
@@ -112,8 +112,7 @@
 
                 </li>
                 <li class="current-menu-item"><a href="gallery.html">Productos</a></li>
-                <li><a href="portfolio.html">Novedades</a></li>
-                <li><a href="contact.html">Contacto</a></li>
+                                 <li><a href="contact.html">Contacto</a></li>
             </ul>
             <!-- Navigation -->
         </div>
@@ -236,7 +235,7 @@
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
                     <li class="page_item"><a href="gallery.html">Tanques</a></li>
@@ -247,14 +246,7 @@
             <li class="col">
                 <h6>Tecno-Partes</h6>
 
-                <p>Somos una empresa dedicada hace mas de 20 años al diseño, desarrolo y producción de productos en
-                    plastico reforzado con fibra de vidrio.</p>
-
-                <p>Durante estos años, hemos orientado todos nuestros recursos a las transformaciones de la cambiante y
-                    sorprendente industria</p>
-
-                <p>Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera
-                    constante, acompañando a nuestros clientes en el desarrollo de sus proyectos</p>
+                <p>Mas de 20 años junto a vos.</p>
 
             </li>
             <li class="col">
@@ -262,8 +254,7 @@
 
                 Andonaegui 5676, Gonzalez Catán<br/>
                 Buenos Aires, Argentina<br/>
-                Tel: 011-5274-8501/8516
-                Tel/FAX: (02202) 431260
+                Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
             </li>
 
