map tecno partes

--- a/src/contact.html
+++ b/src/contact.html
@@ -164,7 +164,7 @@
                             <label>Teléfono:</label>
                             <input name="telefono" class="form-poshytip" id="telefono" type="tel"
                                    placeholder="011-4444-4444"
-                                   />
+                                    />
                         </div>
 
                         <div>
@@ -196,15 +196,20 @@
             <!-- column (right)-->
             <div class="one-column">
                 <!-- content -->
-                <p><img style="border-radius: 15px;" src="img/dummies/mapa.png" alt="map"></p>
+                <iframe style="border: 5px window solid;" width="375" height="461" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                        src="https://maps.google.com.ar/maps?f=q&amp;source=s_q&amp;hl=es&amp;geocode=&amp;q=Andonaegui+5676,+Gonz%C3%A1lez+Catan,+Buenos+Aires&amp;aq=0&amp;oq=Andonaegui+5676,+gonza&amp;sll=-38.452918,-63.598921&amp;sspn=40.872649,79.013672&amp;ie=UTF8&amp;hq=&amp;hnear=Andonaegui+5676,+Gonz%C3%A1lez+Catan,+Buenos+Aires&amp;t=m&amp;ll=-34.765589,-58.618197&amp;spn=0.016252,0.01605&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+                <br/>
+                <small><a
+                        href="https://maps.google.com.ar/maps?f=q&amp;source=embed&amp;hl=es&amp;geocode=&amp;q=Andonaegui+5676,+Gonz%C3%A1lez+Catan,+Buenos+Aires&amp;aq=0&amp;oq=Andonaegui+5676,+gonza&amp;sll=-38.452918,-63.598921&amp;sspn=40.872649,79.013672&amp;ie=UTF8&amp;hq=&amp;hnear=Andonaegui+5676,+Gonz%C3%A1lez+Catan,+Buenos+Aires&amp;t=m&amp;ll=-34.765589,-58.618197&amp;spn=0.016252,0.01605&amp;z=15&amp;iwloc=A"
+                        style="color:#000000;text-align:center; margin-left: 134px;">Ver más grande</a></small>
 
                 <p style="background:#f5f5f5; border-radius: 15px; text-align: center; width: 375px;">Andonaegui
                     5676<br/>
                     Gonzalez Catán<br/>
                     Buenos Aires<br/>
                     Argentina<br/>
-                    Tel.: [+ 54 2202] 431-260   <br/>
-                    Fax: [+ 54 2202] 434-104 <br>    <br/>
+                    Tel.: [+ 54 2202] 431-260 <br/>
+                    Fax: [+ 54 2202] 434-104 <br> <br/>
                     comercializacion@tecno-partes.com.ar</p>
                 <!-- ENDS content -->
             </div>
@@ -276,7 +281,7 @@
     <!-- wrapper-bottom -->
     <div class="wrapper">
         <div id="bottom-text">Powered by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;"
-                                                                                    src="img/footer/logo_footer.png"></a>
+                                                                                      src="img/footer/logo_footer.png"></a>
         </div>
         <!-- Social -->
         <ul class="social ">
@@ -286,8 +291,8 @@
         </ul>
         <!-- ENDS Social -->
         <div id="to-top" class="poshytip" title="To top"></div>
-            </div>
-            <!-- ENDS wrapper-bottom -->
+    </div>
+    <!-- ENDS wrapper-bottom -->
 </div>
 <!-- ENDS Bottom -->
 
